# GameTetris-SFML

./: .gitignore  CMakeLists.txt  DEFINITIONS.hpp  DEFNITIONS.hpp  LICENSE  README.md  clean.sh  main.cpp  run.sh
Animations/AnimatedText/: AnimatedText.cpp  AnimatedText.hpp
Block/: Block.cpp  Block.hpp
Blocks/: Block.cpp  Block.hpp  Blocks.cpp
Colors/: Colors.cpp  Colors.hpp
Game/: Game.cpp  Game.hpp
GameState/: GameState.cpp  GameState.hpp
Grid/: Grid.cpp  Grid.hpp
Interface/GameOver/: GameOver.hpp
Interface/Next/: Next.cpp  Next.hpp
Interface/NextInterface/: NextInterface.hpp
Interface/Score/: Score.cpp  Score.hpp
Interface/ScoreInterface/: ScoreInterface.cpp  ScoreInterface.hpp
Interface/UI/: UI.cpp  UI.hpp
Interface/UserInterface/: UserInterface.hpp
NextInterface/: NextInterface.cpp
Position/: Position.cpp  Position.hpp
TypeBlocks/: TypeBlocks.cpp  TypeBlocks.hpp
UserInterface/: UserInterface.cpp  UserInterface.hpp
global/: DEFINITIONS.hpp
src/Animation/: Animation.cpp  Animation.hpp
src/Application/: Application.cpp  Application.hpp
src/Block/: Block.cpp  Block.hpp
src/Colors/: Colors.cpp  Colors.hpp
src/Game/: Game.cpp  Game.hpp
src/GameState/: GameState.cpp  GameState.hpp
src/Grid/: Grid.cpp  Grid.hpp
src/Interface/Control/: Control.cpp  Control.hpp
src/Interface/GameOver/: GameOver.cpp  GameOver.hpp
src/Interface/Level/: Level.cpp  Level.hpp
src/Interface/Medal/: Medal.cpp  (+1 more)
src/Music/: Music.cpp  Music.hpp
src/Position/: Position.hpp
src/Sound/: Sound.cpp  Sound.hpp
src/TypeBlocks/: TypeBlocks.cpp
(+13 files in other folders)
